资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
#define R_OK   0
#define RUN_OFF   0
#define RUN_ON   1
#define DIR_NEG   0
#define DIR_POS   1
#define LIMIT_ON   1
#define LIMIT_OFF   0
#define RESOURCE_MOTOR   0x00000001
#define RESOURCE_TTL_IN   0x00000002
#define RESOURCE_TTL_OUT   0x00000004
#define RESOURCE_OPTIC_IN   0x00000008
#define RESOURCE_OPTIC_OUT   0x00000010
#define RESOURCE_AD   0x00000020
#define RESOURCE_OC   0x00000040
#define RESOURCE_LINE   0x00000080
#define RESOURCE_CIRCLE   0x00000100
#define RESOURCE_PLC   0x00000200
#define RESOURCE_STREAM   0x00000400
#define RESOURCE_ENCODER   0x00000800
MT_API INT32 __stdcall MT_Help_Encoder_Line_Real_To_Steps(double APitch,double ALineRatio,INT32 ALineCount,double AValue);
MT_API INT32 __stdcall MT_Help_Encoder_Circle_Real_To_Steps(double ACircleRatio,INT32 ALineCount,double AValue);
MT_API double __stdcall MT_Help_Encoder_Line_Steps_To_Real(double APitch,double ALineRatio,INT32 ALineCount,INT32 AValue);
MT_API double __stdcall MT_Help_Encoder_Circle_Steps_To_Real(double ACircleRatio,INT32 ALineCount,INT32 AValue);
MT_API INT32 __stdcall MT_Help_Grating_Line_Real_To_Steps(double AUnit_um,double AValue);
MT_API INT32 __stdcall MT_Help_Grating_Circle_Real_To_Steps(INT32 ALineCount,double AValue);
MT_API double __stdcall MT_Help_Grating_Line_Steps_To_Real(double AUnit_um,INT32 AValue);
MT_API double __stdcall MT_Help_Grating_Circle_Steps_To_Real(INT32 ALineCount,INT32 AValue);
MT_API float __stdcall MT_Help_Encoder_Factor(double AStepAngle,INT32 ADiv,INT32 ALineCount);
MT_API float __stdcall MT_Help_Grating_Line_Factor(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,double AUnit_um);
MT_API float __stdcall MT_Help_Grating_Circle_Factor(double AStepAngle,INT32 ADiv,double ACircleRatio,INT32 ALineCount);