资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.pas


//Encoder
//物理量到单位脉冲
function MT_Help_Encoder_Line_Real_To_Steps(
   APitch:Double;ALineRatio:Double;ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Encoder_Circle_Real_To_Steps(
   ACircleRatio:Double;ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Encoder_Line_Steps_To_Real(
   APitch:Double;ALineRatio:Double;ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Encoder_Circle_Steps_To_Real(
   ACircleRatio:Double;ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'
//Grating
//物理量到单位脉冲
function MT_Help_Grating_Line_Real_To_Steps(AUnit_um:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Grating_Circle_Real_To_Steps(ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Grating_Line_Steps_To_Real(AUnit_um:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Grating_Circle_Steps_To_Real(ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'

function MT_Help_Encoder_Factor(AStepAngle:Double;ADiv:Integer;
   ALineCount:Integer):Single;stdcall;external 'MT_API.dll'

//光栅尺安装在机械上，电机旋转并不一致，需要考虑机械的影响
function MT_Help_Grating_Line_Factor(AStepAngle:Double;ADiv:Integer;
   APitch:Double;ALineRatio:Double;AUnit_um:Double):Single;stdcall;external 'MT_API.dll'

function MT_Help_Grating_Circle_Factor(AStepAngle:Double;ADiv:Integer;
   ACircleRatio:Double;ALineCount:Integer):Single;stdcall;external 'MT_API.dll'

  const R_OK =0;
  const RUN_OFF=0;
  const RUN_ON=1;
  const DIR_NEG=0;
  const DIR_POS=1;
  const LIMIT_ON=1;
  const LIMIT_OFF=0;

//定义内部资源类型

const RESOURCE_MOTOR        =$00000001;   //电机
const RESOURCE_TTL_IN       =$00000002;   //TTL输入
const RESOURCE_TTL_OUT      =$00000004;   //TTL输出
const RESOURCE_OPTIC_IN     =$00000008;   //光隔输入
const RESOURCE_OPTIC_OUT    =$00000010;   //光隔输出
const RESOURCE_AD           =$00000020;   //AD输入
const RESOURCE_OC           =$00000040;   //OC输出
const RESOURCE_LINE         =$00000080;   //直线插补
const RESOURCE_CIRCLE       =$00000100;   //圆弧插补
const RESOURCE_PLC          =$00000200;   //PLC功能
const RESOURCE_STREAM       =$00000400;   //Stream功能
const RESOURCE_ENCODER      =$00000800;   //Encoder功能

implementation

end.
